--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Project4_test1</string>
+    <string name="save">저장</string>
 
     <string-array name="first_aid">
         <item>심폐소생술</item>
